Web Browser App: Refactoring for Proxy Server
* Simplify proxy reuse
